Подключен css и контентные изображения

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Нёрдс</title>
-	<link rel="stylesheet" href="css/style-index.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 	<header class="main-header">
 		<div class="container">
 			<a class="logo" href="#">
-				<img src="img/nerds-index/nerds-logo.png" alt="nёrds" height="65" width="160">
+				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
@@ -45,7 +45,7 @@
 				<div class="slider">
 					<div class="slider-item active">
 						<div class="slider-img">
-							<img src="img/nerds-index/slider-1.jpg" alt="slide1" height="430" width="760">
+							<img src="img/slider-1.jpg" alt="slide1" height="430" width="760">
 						</div>
 						<div class="slider-caption">
 							<b class="slider-header">Долго, дорого, скурпулезно</b>
@@ -55,7 +55,7 @@
 					</div>
 					<div class="slider-item">
 						<div class="slider-img">
-							<img src="img/nerds-index/slider-2.jpg" alt="slide2" height="430" width="760">
+							<img src="img/slider-2.jpg" alt="slide2" height="430" width="760">
 						</div>
 						<div class="slider-caption">
 							<b class="slider-header">Любим математику как никто другой</b>
@@ -65,7 +65,7 @@
 					</div>
 					<div class="slider-item">
 						<div class="slider-img">
-							<img src="img/nerds-index/slider-3.jpg" alt="slide3.jpeg" height="430" width="760">
+							<img src="img/slider-3.jpg" alt="slide3.jpeg" height="430" width="760">
 						</div>
 						<div class="slider-caption">
 							<b class="slider-header">Только ночь, только хардкор</b>
@@ -81,7 +81,7 @@
 				<div class="features">
 					<div class="features-item">
 						<figure class="features-img">
-							<img src="img/nerds-index/illustration-1.jpg" alt="web-sites" height="146" width="300">
+							<img src="img/illustration-1.jpg" alt="web-sites" height="146" width="300">
 						</figure>
 						<div class="features-text">
 							<h2>Веб-сайты</h2>
@@ -92,7 +92,7 @@
 					
 					<div class="features-item">
 						<figure class="features-img">
-							<img src="img/nerds-index/illustration-2.jpg" alt="applications" height="146" width="300">
+							<img src="img/illustration-2.jpg" alt="applications" height="146" width="300">
 						</figure>
 						<div class="features-text">
 							<h2>Приложения </h2>
@@ -103,7 +103,7 @@
 
 					<div class="features-item">
 						<figure class="features-img">
-							<img src="img/nerds-index/illustration-3.jpg" alt="presentations" height="146" width="300">
+							<img src="img/illustration-3.jpg" alt="presentations" height="146" width="300">
 						</figure>
 						<div class="features-text">
 							<h2>Презентации</h2>
@@ -128,7 +128,7 @@
 						</ul>
 					</div>
 					<div class="about-right">
-						<img src="img/nerds-index/nerds-illustration.jpg" alt="nёrds" height="210" width="360">
+						<img src="img/nerds-illustration.jpg" alt="nёrds" height="210" width="360">
 						<h4>С 2004 года любим точность во всем:</h4>
 						<ul>
 							<li><span>146%</span> Уровень самоотдачи</li>
@@ -142,16 +142,16 @@
 				<!-- RECENT-WORKS -->
 				<div class="recent-works">
 					<a class="recent-logo" href="#">
-						<img src="img/nerds-index/logo-1.png" alt="html-academy" height="68" width="199">
+						<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
 					</a>
 					<a class="recent-logo" href="#">
-						<img src="img/nerds-index/logo-2.png" alt="borodinski" height="90" width="210">
+						<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
 					</a>
 					<a class="recent-logo" href="#">
-						<img src="img/nerds-index/logo-3.png" alt="pink" height="52" width="185">
+						<img src="img/logo-3.png" alt="pink" height="52" width="185">
 					</a>
 					<a class="recent-logo" href="#">
-						<img src="img/nerds-index/logo-4.png" alt="mishka" height="84" width="173">
+						<img src="img/logo-4.png" alt="mishka" height="84" width="173">
 					</a>
 				</div>
 				<!-- end recent-works -->
