--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин готовых шаблонов</title>
-	<link rel="stylesheet" href="css/style-catalog.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 	<header class="main-header">
 		<div class="container">
 			<a class="logo" href="#">
-				<img src="img/nerds-catalog/nerds-logo.png" alt="nёrds" height="65" width="160">
+				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
@@ -124,7 +124,7 @@
 
 					<div class="gallery">
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-sedona.jpg" alt="sedona"  height="575" width="359">
+							<img src="img/img-sedona.jpg" alt="sedona"  height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">Sedona</a></h3>
 								<p>Информационный сайт для туристов</p>
@@ -132,7 +132,7 @@
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-pink.jpg" alt="pink" height="575" width="359">
+							<img src="img/img-pink.jpg" alt="pink" height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">Pink app</a></h3>
 								<p>Продуктовый лендинг приложения для iOS и Android</p>
@@ -140,7 +140,7 @@
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-barbershop.jpg" alt="barbershop" height="575" width="359">
+							<img src="img/img-barbershop.jpg" alt="barbershop" height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">Barbershop</a></h3>
 								<p>Сайт салона красоты. Для мужчин, да.</p>
@@ -148,7 +148,7 @@
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-mishka.jpg" alt="mishka" height="575" width="359">
+							<img src="img/img-mishka.jpg" alt="mishka" height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">Mishka</a></h3>
 								<p>Интернет-магазин вязанных игрушек</p>
@@ -156,7 +156,7 @@
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-aplus.jpg" alt="a-plus" height="575" width="359">
+							<img src="img/img-aplus.jpg" alt="a-plus" height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">A plus</a></h3>
 								<p>Лендинг курсов повышения квалификации</p>
@@ -164,7 +164,7 @@
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/nerds-catalog/img-kvast.jpg" alt="kvast" height="575" width="359">
+							<img src="img/img-kvast.jpg" alt="kvast" height="575" width="359">
 							<div class="hover">
 								<h3><a href="#">Кваст</a></h3>
 								<p>Промо-сайт производителя крафтового кваса</p>
