Изменения по верстке
1. Файл index: h1 изменен на сочитание тегов p+b
2.Catalog: кнопка показать изменена на button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->
 
 	<header class="main-header">
-		<div class="container">
+		<div class="container clearfix">
 			<a class="logo" href="#">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
@@ -37,7 +37,6 @@
 	<!-- CONTENT  -->
 
 	<main>
-
 		<div class="content">
 			<div class="container">
 
@@ -78,7 +77,7 @@
 
 
 				<!-- FEATURES -->
-				<div class="features">
+				<div class="features clearfix">
 					<div class="features-item">
 						<figure class="features-img">
 							<img src="img/illustration-1.jpg" alt="web-sites" height="146" width="300">
@@ -116,9 +115,9 @@
 
 
 				<!-- ABOUT -->
-				<div class="about">
+				<div class="about clearfix">
 					<div class="about-left">
-						<h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
+						<p><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
 						<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
 						<h4>Выполняем заказы на разработку:</h4>
 						<ul>
@@ -225,5 +224,8 @@
 
 		</div>
 	</footer>
+
+	<!-- Скрипт live reload -->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
