--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->
 
 	<header class="main-header">
-		<div class="container">
+		<div class="container clearfix">
 			<a class="logo" href="#">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
@@ -100,7 +100,7 @@
 								Корзина
 							</label>
 						</fieldset>
-						<a class="button" href="form.html">Показать</a>
+						<button type="submit">Показать</button>
 					</form>
 				</div>
 				<!-- end left section -->
@@ -253,5 +253,8 @@
 
 		</div>
 	</footer>
+
+	<!-- Скрипт live reload -->
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
