Прописала ссылки, где можно

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -11,19 +11,19 @@
 
 	<header class="main-header">
 		<div class="container clearfix">
-			<a class="logo" href="#">
+			<a class="logo" href="index.html">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
 					<li>
-						<a class="nav-item" href="#">Студия</a>
+						<a class="nav-item" href="index.html">Студия</a>
 					</li>
 					<li>
 						<a class="nav-item" href="#">Клиенты</a>
 					</li>
 					<li>
-						<a class="nav-item" href="#">Магазин</a>
+						<a class="nav-item" href="nerds-catalog.html">Магазин</a>
 					</li>
 					<li>
 						<a class="nav-item" href="#">Контакты</a>
@@ -142,7 +142,7 @@
 						<article class="gallery-item">
 							<img src="img/img-barbershop.jpg" alt="barbershop" height="575" width="359">
 							<div class="hover">
-								<h3><a href="#">Barbershop</a></h3>
+								<h3><a href="http://barbershop.websciurus.com/" target="_blank">Barbershop</a></h3>
 								<p>Сайт салона красоты. Для мужчин, да.</p>
 								<a class="btn" href="#">9 900 руб.</a>
 							</div>
@@ -240,9 +240,9 @@
 			<!-- SOCIAL -->
 			<div class="social">
 				<div class="social-icons">
-					<a href="#">Вконтакте</a>
-					<a href="#">Facebook</a>
-					<a href="#">Instagram</a>
+					<a href="https://vk.com/" target="_blank">Вконтакте</a>
+					<a href="https://facebook.com/" target="_blank">Facebook</a>
+					<a href="https://instagram.com/" target="_blank">Instagram</a>
 				</div>
 				<div class="social-text">
 					<b>Давайте дружить, это выгодно!</b>
