--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<header class="main-header">
 		<div class="container clearfix">
-			<a class="logo" href="#">
+			<a class="logo" href="index.html">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
@@ -23,7 +23,7 @@
 						<a class="nav-item" href="#">Клиенты</a>
 					</li>
 					<li>
-						<a class="nav-item" href="#">Магазин</a>
+						<a class="nav-item" href="nerds-catalog.html">Магазин</a>
 					</li>
 					<li>
 						<a class="nav-item" href="#">Контакты</a>
@@ -140,13 +140,13 @@
 
 				<!-- RECENT-WORKS -->
 				<div class="recent-works">
-					<a class="recent-logo" href="#">
+					<a class="recent-logo" href="https://htmlacademy.ru/ target="_blank"">
 						<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
 					</a>
-					<a class="recent-logo" href="#">
+					<a class="recent-logo" href="http://barbershop.websciurus.com/ target="_blank"">
 						<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
 					</a>
-					<a class="recent-logo" href="#">
+					<a class="recent-logo" href="https://htmlacademy.ru/">
 						<img src="img/logo-3.png" alt="pink" height="52" width="185">
 					</a>
 					<a class="recent-logo" href="#">
@@ -169,7 +169,7 @@
 					<p>191186, Санкт-Петербург,<br>
 					ул. Б. Конюшенная, д.19/8 тел.<br> 
 					+7(812)275-75-75</p>
-					<a  class="btn" href="">Напишите нам</a>
+					<a  class="btn" href="#">Напишите нам</a>
 				</div>
 				<!-- end contacts -->
 
@@ -211,9 +211,9 @@
 			<!-- SOCIAL -->
 			<div class="social">
 				<div class="social-icons">
-					<a href="#">Вконтакте</a>
-					<a href="#">Facebook</a>
-					<a href="#">Instagram</a>
+					<a href="https://vk.com/" target="_blank">Вконтакте</a>
+					<a href="https://facebook.com/" target="_blank">Facebook</a>
+					<a href="https://instagram.com/" target="_blank">Instagram</a>
 				</div>
 				<div class="social-text">
 					<b>Давайте дружить, это выгодно!</b>
