исправила несколько синтаксических ошибок

--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
 
 				<!-- RECENT-WORKS -->
 				<div class="recent-works">
-					<a class="recent-logo" href="https://htmlacademy.ru/ target="_blank"">
+					<a class="recent-logo" href="https://htmlacademy.ru/" target="_blank">
 						<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
 					</a>
-					<a class="recent-logo" href="http://barbershop.websciurus.com/ target="_blank"">
+					<a class="recent-logo" href="http://barbershop.websciurus.com/" target="_blank">
 						<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
 					</a>
-					<a class="recent-logo" href="https://htmlacademy.ru/">
+					<a class="recent-logo" href="#">
 						<img src="img/logo-3.png" alt="pink" height="52" width="185">
 					</a>
 					<a class="recent-logo" href="#">
