--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Нёрдс</title>
+	<link rel="stylesheet"  type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+
 </head>
 <body>
 
@@ -11,74 +14,78 @@
 
 	<header class="main-header">
 		<div class="container clearfix">
-			<a class="logo" href="#">
+			<a class="logo" href="index.html">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
-					<li>
+					<li class="active">
 						<a class="nav-item" href="#">Студия</a>
 					</li>
 					<li>
 						<a class="nav-item" href="#">Клиенты</a>
 					</li>
 					<li>
-						<a class="nav-item" href="#">Магазин</a>
+						<a class="nav-item" href="nerds-catalog.html">Магазин</a>
 					</li>
 					<li>
 						<a class="nav-item" href="#">Контакты</a>
 					</li>
 				</ul>
 			</nav>
-			<a class="cart" href="#">Корзина</a>
+			<div class="cart">
+				<a href="#">Корзина</a>
+			</div>
 		</div>	
 	</header>
 
 	<!-- CONTENT  -->
 
 	<main>
+		<!-- SLIDER -->
+		<div class="slider">
+			<div class="container">
+				<div class="slider-item active">
+					<div class="slider-caption">
+						<b class="slider-header">Долго, дорого, скрупулезно.</b>
+						<p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+					</div>
+					<div class="slider-img">
+						<img src="img/slider-1.jpg" alt="slide1" height="421" width="760">
+					</div>
+					<a class="btn" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-item">
+					<div class="slider-caption">
+						<b class="slider-header">Любим математику как никто другой</b>
+						<p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций.</p>
+					</div>
+					<a class="btn" href="#">Узнать больше</a>
+					<div class="slider-img">
+						<img src="img/slider-2.jpg" alt="slide2" height="421" width="760">
+					</div>
+				</div>
+				<div class="slider-item">
+					<div class="slider-caption">
+						<b class="slider-header">Только ночь, <br>только хардкор</b>
+						<p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+					</div>
+					<a class="btn" href="#">Узнать больше</a>
+					<div class="slider-img">
+						<img src="img/slider-3.jpg" alt="slide3.jpeg" height="421" width="760">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end slider -->
+
+
 		<div class="content">
 			<div class="container">
 
-				<!-- SLIDER -->
-				<div class="slider">
-					<div class="slider-item active">
-						<div class="slider-img">
-							<img src="img/slider-1.jpg" alt="slide1" height="430" width="760">
-						</div>
-						<div class="slider-caption">
-							<b class="slider-header">Долго, дорого, скурпулезно</b>
-							<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-						</div>
-						<a class="btn" href="#">Узнать больше</a>
-					</div>
-					<div class="slider-item">
-						<div class="slider-img">
-							<img src="img/slider-2.jpg" alt="slide2" height="430" width="760">
-						</div>
-						<div class="slider-caption">
-							<b class="slider-header">Любим математику как никто другой</b>
-							<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-						</div>
-						<a class="btn" href="#">Узнать больше</a>
-					</div>
-					<div class="slider-item">
-						<div class="slider-img">
-							<img src="img/slider-3.jpg" alt="slide3.jpeg" height="430" width="760">
-						</div>
-						<div class="slider-caption">
-							<b class="slider-header">Только ночь, только хардкор</b>
-							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-						</div>
-						<a class="btn" href="#">Узнать больше</a>
-					</div>
-				</div>
-				<!-- end slider -->
-
-
 				<!-- FEATURES -->
 				<div class="features clearfix">
-					<div class="features-item">
+					<div class="features-item sites">
 						<figure class="features-img">
 							<img src="img/illustration-1.jpg" alt="web-sites" height="146" width="300">
 						</figure>
@@ -89,7 +96,7 @@
 						<a class="btn" href="#">Заказать</a>
 					</div>
 					
-					<div class="features-item">
+					<div class="features-item apps">
 						<figure class="features-img">
 							<img src="img/illustration-2.jpg" alt="applications" height="146" width="300">
 						</figure>
@@ -100,13 +107,13 @@
 						<a class="btn" href="#">Заказать</a>
 					</div>
 
-					<div class="features-item">
+					<div class="features-item presents">
 						<figure class="features-img">
 							<img src="img/illustration-3.jpg" alt="presentations" height="146" width="300">
 						</figure>
 						<div class="features-text">
 							<h2>Презентации</h2>
-							<p>Вы даже не подозреваете насколько вы изумительны</p>
+							<p>Вы даже не подозреваете, насколько вы изумительны!</p>
 						</div>
 						<a class="btn" href="#">Заказать</a>
 					</div>
@@ -117,10 +124,10 @@
 				<!-- ABOUT -->
 				<div class="about clearfix">
 					<div class="about-left">
-						<p><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
-						<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
+						<p class="lead"><b>Мы &#8212 маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+						<p class="text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 						<h4>Выполняем заказы на разработку:</h4>
-						<ul>
+						<ul class="service">
 							<li>Веб-сайтов любой сложности</li>
 							<li>Мобильных приложений для iOS и Andriod</li>
 							<li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -129,10 +136,10 @@
 					<div class="about-right">
 						<img src="img/nerds-illustration.jpg" alt="nёrds" height="210" width="360">
 						<h4>С 2004 года любим точность во всем:</h4>
-						<ul>
-							<li><span>146%</span> Уровень самоотдачи</li>
-							<li><span>100%</span> Соблюдение сроков</li>
-							<li><span>50%</span> Минимальная предоплата</li>
+						<ul class="guaranty">
+							<li><span class="percent">146<b>%</b></span> <span class="text">Уровень самоотдачи</span></li>
+							<li><span class="percent">100<b>%</b></span> <span class="text">Соблюдение сроков</span></li>
+							<li><span class="percent">50<b>%</b></span> <span class="text">Минимальная предоплата</span></li>
 						</ul>
 					</div>
 				</div>
@@ -140,18 +147,26 @@
 
 				<!-- RECENT-WORKS -->
 				<div class="recent-works">
-					<a class="recent-logo" href="#">
-						<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
-					</a>
-					<a class="recent-logo" href="#">
-						<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
-					</a>
-					<a class="recent-logo" href="#">
-						<img src="img/logo-3.png" alt="pink" height="52" width="185">
-					</a>
-					<a class="recent-logo" href="#">
-						<img src="img/logo-4.png" alt="mishka" height="84" width="173">
-					</a>
+					<!-- <div class="vertical-line"> -->
+						<a class="recent-logo" href="https://htmlacademy.ru/" target="_blank">
+							<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
+						</a>
+					<!-- </div> -->
+					<!-- <div class="vertical-line"> -->
+						<a class="recent-logo" href="http://barbershop.websciurus.com/" target="_blank">
+							<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
+						</a>
+					<!-- </div> -->
+					<!-- <div class="vertical-line"> -->
+						<a class="recent-logo" href="#">
+							<img src="img/logo-3.png" alt="pink" height="52" width="185">
+						</a>
+					<!-- </div> -->
+					<!-- <div class="vertical-line"> -->
+						<a class="recent-logo" href="#">
+							<img src="img/logo-4.png" alt="mishka" height="84" width="173">
+						</a>
+					<!-- </div> -->
 				</div>
 				<!-- end recent-works -->
 
@@ -167,9 +182,9 @@
 				<div class="contacts">
 					<h3>nёrds design studio</h3>
 					<p>191186, Санкт-Петербург,<br>
-					ул. Б. Конюшенная, д.19/8 тел.<br> 
-					+7(812)275-75-75</p>
-					<a  class="btn" href="">Напишите нам</a>
+					ул. Б. Конюшенная, д. 19/8 <br></p>
+					<p>тел. +7 (812) 275-75-75</p>
+					<a  class="btn" href="#">Напишите нам</a>
 				</div>
 				<!-- end contacts -->
 
@@ -185,35 +200,14 @@
 	<footer class="main-footer">
 		<div class="container">
 
-			<!-- MODAL WINDOW -->
-			<div class="modal-window">
-				<form action="#" method="post">
-					<fieldset>
-						<legend>Напишите нам</legend>
-						<label>
-							Ваше имя:
-							<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
-						</label>
-						<label>
-							Ваш e-mail:
-							<input type="email" name="e-mail" placeholder="Для отправки ответа">
-						</label>
-						<label>
-							Текст письма:
-							<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
-						</label>
-						<button class="btn">Отправить</button>
-					</fieldset>
-				</form>
-			</div>
-			<!-- end modal window -->
+
 		
 			<!-- SOCIAL -->
 			<div class="social">
 				<div class="social-icons">
-					<a href="#">Вконтакте</a>
-					<a href="#">Facebook</a>
-					<a href="#">Instagram</a>
+					<a class="social-vk" href="https://vk.com/" target="_blank">Вконтакте</a>
+					<a class="social-fb" href="https://facebook.com/" target="_blank">Facebook</a>
+					<a class="social-insta" href="https://instagram.com/" target="_blank">Instagram</a>
 				</div>
 				<div class="social-text">
 					<b>Давайте дружить, это выгодно!</b>
@@ -224,6 +218,30 @@
 
 		</div>
 	</footer>
+
+	<!-- MODAL WINDOW -->
+	<div class="modal-window">
+		<form action="#" method="post">
+			<fieldset class="write-us">
+				<legend>Напишите нам</legend>
+				<label>
+					<p>Ваше имя:</p>
+					<input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
+				</label>
+				<label>
+					<p>Ваш e-mail:</p>
+					<input type="email" name="e-mail" placeholder="Для отправки ответа">
+				</label>
+				<label class="textarea">
+					<p>Текст письма:</p>
+					<textarea rows="5" cols="89" name="message" placeholder="В свободной форме"></textarea>
+				</label>
+				<button class="btn">Отправить</button>
+				<button class="close" type="button" title="Закрыть">Закрыть</button>
+			</fieldset>
+		</form>
+	</div>
+	<!-- end modal window -->
 
 	<!-- Скрипт live reload -->
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
