--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -3,38 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин готовых шаблонов</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet"  type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 
 	<!-- HEADER -->
 
-	<header class="main-header">
+	<header class="main-header inner">
 		<div class="container clearfix">
 			<a class="logo" href="index.html">
 				<img src="img/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
-			<nav class="nav-bar inner">	
+			<nav class="nav-bar">	
 				<ul>
-					<li>
-						<a class="nav-item" href="index.html">Студия</a>
+					<li class="nav-item active">
+						<a href="#">Студия</a>
 					</li>
-					<li>
-						<a class="nav-item" href="#">Клиенты</a>
+					<li class="nav-item">
+						<a href="#">Клиенты</a>
 					</li>
-					<li class="active">
-						<a class="nav-item" href="nerds-catalog.html">Магазин</a>
+					<li class="nav-item">
+						<a href="nerds-catalog.html">Магазин</a>
+					</li >
+					<li class="nav-item">
+						<a href="#">Контакты</a>
 					</li>
-					<li>
-						<a class="nav-item" href="#">Контакты</a>
+					<li class="nav-item cart">
+						<a href="#">Корзина</a>
 					</li>
 				</ul>
 			</nav>
-			<div class="cart">
-				<a href="#">Корзина</a>
-			</div>
 		</div>	
 	</header>
 
@@ -71,11 +71,11 @@
 
 						<fieldset class="grid">
 							<legend class="form-caption">Сетка: </legend>
-							<input type="radio" id="adaptive-id" value="adaptive" name="grid" checked disabled>
+							<input type="radio" id="adaptive-id" value="adaptive" name="grid" checked>
 							<label for="adaptive-id">
 								Адаптивная
 							</label>
-							<input type="radio" id="fixed-id" value="fixed" name="grid" disabled>
+							<input type="radio" id="fixed-id" value="fixed" name="grid">
 							<label for="fixed-id">
 								Фиксированная
 							</label>
@@ -131,51 +131,63 @@
 
 					<div class="gallery">
 						<article class="gallery-item">
-							<img src="img/img-sedona.jpg" alt="sedona"  height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="#">Sedona</a></h3>
-								<p>Информационный сайт для туристов</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-sedona.jpg" alt="sedona"  height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="#">Sedona</a></h3>
+									<p>Информационный сайт для туристов</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/img-pink.jpg" alt="pink" height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="#">Pink app</a></h3>
-								<p>Продуктовый лендинг приложения для iOS и Android</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-pink.jpg" alt="pink" height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="#">Pink app</a></h3>
+									<p>Продуктовый лендинг приложения для iOS и Android</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/img-barbershop.jpg" alt="barbershop" height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="http://barbershop.websciurus.com/" target="_blank">Barbershop</a></h3>
-								<p>Сайт салона красоты. Для мужчин, да.</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-barbershop.jpg" alt="barbershop" height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="http://barbershop.websciurus.com/" target="_blank">Barbershop</a></h3>
+									<p>Сайт салона красоты. Для мужчин, да.</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/img-mishka.jpg" alt="mishka" height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="#">Mishka</a></h3>
-								<p>Интернет-магазин вязанных игрушек</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-mishka.jpg" alt="mishka" height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="#">Mishka</a></h3>
+									<p>Интернет-магазин вязанных игрушек</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/img-aplus.jpg" alt="a-plus" height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="#">A plus</a></h3>
-								<p>Лендинг курсов повышения квалификации</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-aplus.jpg" alt="a-plus" height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="#">A plus</a></h3>
+									<p>Лендинг курсов повышения квалификации</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 						<article class="gallery-item">
-							<img src="img/img-kvast.jpg" alt="kvast" height="575" width="359">
-							<div class="hover">
-								<h3><a class="item-name" href="#">Кваст</a></h3>
-								<p>Промо-сайт производителя крафтового кваса</p>
-								<a class="btn" href="#">9 900 руб.</a>
+							<div class="gallery-item-wrapper">
+								<img src="img/img-kvast.jpg" alt="kvast" height="575" width="359">
+								<div class="hover">
+									<h3><a class="item-name" href="#">Кваст</a></h3>
+									<p>Промо-сайт производителя крафтового кваса</p>
+									<a class="btn" href="#">9 900 руб.</a>
+								</div>
 							</div>
 						</article>
 					</div>
