Template, фон, кнопки

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li class="nav-item">
 						<a href="#">Контакты</a>
 					</li>
-					<li class="nav-item cart active">
+					<li class="nav-item cart">
 						<a href="#">Корзина</a>
 					</li>
 				</ul>
