--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -18,13 +18,13 @@
 			</a>
 			<nav class="nav-bar">	
 				<ul>
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a href="#">Студия</a>
 					</li>
 					<li class="nav-item">
 						<a href="#">Клиенты</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a href="nerds-catalog.html">Магазин</a>
 					</li >
 					<li class="nav-item">
@@ -41,12 +41,12 @@
 	<!-- CONTENT -->
 
 	<main>
-		<div class="content">
-			<div class="catalog-item">
-				<div class="container">
-					<h1>Магазин готовых шаблонов</h1>
-				</div>
+		<div class="catalog-item">
+			<div class="container">
+				<h1>Магазин готовых шаблонов</h1>
 			</div>
+		</div>
+		<div class="content">
 			<div class="container">
 
 
@@ -107,7 +107,7 @@
 								Корзина
 							</label>
 						</fieldset>
-						<button class="button" type="submit">Показать</button>
+						<button class="button btn" type="submit">Показать</button>
 					</form>
 				</div>
 				<!-- end left section -->
