--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -19,7 +19,7 @@
 			<nav class="nav-bar">	
 				<ul>
 					<li class="nav-item">
-						<a href="#">Студия</a>
+						<a href="index.html">Студия</a>
 					</li>
 					<li class="nav-item">
 						<a href="#">Клиенты</a>
@@ -57,15 +57,15 @@
 						<div class="range-filter">
 							<div class="range-controls">
 								<div class="scale">
-									<div class="bar" style="margin-left: 20%; width: 30%">
+									<div class="bar" style="margin-left: 6%; width: 58%">
 									</div>
 									<div class="toggle toggle-min"></div>
 									<div class="toggle toggle-max"></div>
 								</div>
-								<div class="price-controls">
-									<label class="min-price price">от <input name="min-price" type="text" value="0"></label>
-									<label class="max-price price">до <input name="max-price" type="text" value="15000"></label>
-								</div>
+							</div>
+							<div class="price-controls">
+								<label class="min-price price">от <input name="min-price" type="text" value="0"></label>
+								<label class="max-price price">до <input name="max-price" type="text" value="15000"></label>
 							</div>
 						</div>
 
@@ -251,22 +251,23 @@
 	</footer>
 
 	<!-- MODAL WINDOW -->
-	<div class="modal-window inner">
+	<div class="modal-window">
 		<form action="#" method="post">
 			<fieldset class="write-us">
 				<legend>Напишите нам</legend>
-				<label>
-					<p>Ваше имя:</p>
-					<input type="text" name="name" id="name-id" placeholder="Представьтесь, пожалуйста">
+				<label for="name-id">
+					Ваше имя:
 				</label>
-				<label>
-					<p>Ваш e-mail:</p>
-					<input type="email" name="e-mail" placeholder="Для отправки ответа">
+				<label for="e-mail-id">
+					Ваш e-mail:
 				</label>
-				<label class="textarea">
-					<p>Текст письма:</p>
-					<textarea rows="5" cols="89" name="message" placeholder="В свободной форме"></textarea>
+				<input type="text" name="name" id="name-id" placeholder="Представьтесь, пожалуйста">
+				
+				<input type="email" name="e-mail" id="e-mail-id" placeholder="Для отправки ответа">
+				<label class="textarea" for="message-id">
+					Текст письма:
 				</label>
+				<textarea rows="5" cols="89" name="message" id="message-id" placeholder="В свободной форме"></textarea>
 				<button class="btn">Отправить</button>
 				<button class="close" type="button" title="Закрыть">Закрыть</button>
 			</fieldset>
