проверка по критериям

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -145,7 +145,7 @@
 								<img src="img/img-pink.jpg" alt="pink" height="575" width="359">
 								<div class="hover">
 									<h3><a class="item-name" href="#">Pink app</a></h3>
-									<p>Продуктовый лендинг приложения для iOS и Android</p>
+									<p>Продуктовый лендинг приложения для iOS и Android Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ducimus, magni laboriosam suscipit quibusdam consequatur molestiae aliquam est magnam saepe, adipisci esse nam at! Quae mollitia rem nulla omnis impedit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem porro quasi corporis impedit, ea quaerat. Commodi, repellendus doloremque possimus voluptatum numquam fuga est, consequatur vero labore nisi voluptate laboriosam iste!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius vitae excepturi ipsa quibusdam debitis, est in recusandae alias ullam, hic distinctio vero voluptas aspernatur quo, quas veniam id! Voluptatibus, totam.</p>
 									<a class="btn" href="#">9 900 руб.</a>
 								</div>
 							</div>
