--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<p>191186, Санкт-Петербург,<br>
 					ул. Б. Конюшенная, д. 19/8 <br></p>
 					<p>тел. +7 (812) 275-75-75</p>
-					<a  class="btn" href="#">Напишите нам</a>
+					<a  class="btn" href="#modal-window">Напишите нам</a>
 				</div>
 				<!-- end contacts -->
 
