--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -211,6 +211,9 @@
 			<!-- MAP -->
 			<div id="map" class="map">
 				<div class="container">
+					<div class="google-map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651563!2d30.32089461639426!3d59.9387941818763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1478867918398" width="100%" height="413" frameborder="0" style="border:0"></iframe>
+					</div>
 
 					<!-- CONTACTS -->
 					<div class="contacts">
@@ -218,7 +221,7 @@
 						<p>191186, Санкт-Петербург,<br>
 						ул. Б. Конюшенная, д. 19/8 <br></p>
 						<p>тел. +7 (812) 275-75-75</p>
-						<a  class="btn" href="#">Напишите нам</a>
+						<a  class="btn write-us" href="#">Напишите нам</a>
 					</div>
 					<!-- end contacts -->
 
@@ -251,7 +254,7 @@
 	</footer>
 
 	<!-- MODAL WINDOW -->
-	<div class="modal-window">
+	<div class="modal-window inner">
 		<form action="#" method="post">
 			<fieldset class="write-us">
 				<legend>Напишите нам</legend>
@@ -263,7 +266,7 @@
 				</label>
 				<input type="text" name="name" id="name-id" placeholder="Представьтесь, пожалуйста">
 				
-				<input type="email" name="e-mail" id="e-mail-id" placeholder="Для отправки ответа">
+				<input type="email" name="e-mail" id="email-id" placeholder="Для отправки ответа">
 				<label class="textarea" for="message-id">
 					Текст письма:
 				</label>
@@ -277,5 +280,6 @@
 
 	<!-- Скрипт live reload -->
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	<script src="js/main-js.js"></script>
 </body>
 </html>
