удалила lockal storage

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 	<!-- MODAL WINDOW -->
 	<div class="modal-window">
 		<form action="#" method="post">
-			<fieldset class="write-us">
+			<fieldset class="modal-write-us">
 				<legend>Напишите нам</legend>
 				<label for="name-id">
 					Ваше имя:
