минимизация файлов и исправление ошибок

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>HTML Academy: Нёрдс</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet"  type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
 <body>
@@ -67,8 +67,7 @@
 						<div class="slide">
 							<div class="slide-text">
 								<b class="slide-title">Любим математику как никто другой</b>
-								<p>Никакого креатива, только математические формулы <br> для расчета идеальных пропорций.
-								</p>
+								<p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
@@ -76,7 +75,7 @@
 						<div class="slide">
 							<div class="slide-text">
 								<b class="slide-title">Только ночь, <br>только хардкор</b>
-								<p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+								<p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
@@ -195,7 +194,7 @@
 						<p>191186, Санкт-Петербург,<br>
 						ул. Б. Конюшенная, д. 19/8 <br></p>
 						<p>тел. +7 (812) 275-75-75</p>
-						<a  class="btn write-us" href="#">Напишите нам</a>
+						<a  class="btn write-us" href="feedback.html">Напишите нам</a>
 					</div>
 					<!-- end contacts -->
 
@@ -232,13 +231,13 @@
 
 	<!-- MODAL WINDOW -->
 	<div class="modal-window">
-		<form action="#" method="post">
+		<form action="http://echo.nerdss.ru" method="post">
 			<fieldset class="modal-write-us">
 				<legend>Напишите нам</legend>
 				<label for="name-id">
 					Ваше имя:
 				</label>
-				<label for="e-mail-id">
+				<label for="email-id">
 					Ваш e-mail:
 				</label>
 				<input type="text" name="fullname" id="name-id" placeholder="Представьтесь, пожалуйста">
@@ -254,7 +253,7 @@
 		</form>
 	</div>
 	<!-- end modal window -->
+	<script type="text/javascript" src="js/main-js.min.js"></script>
 
-	
 </body>
 </html>
