--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet"  type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.min.css">
-
 </head>
 <body>
 
@@ -42,7 +41,9 @@
 	<!-- CONTENT  -->
 
 	<main>
+
 		<!-- SLIDER -->
+
 		<div class="slider">
 			<div class="container">
 				<div class="slider-wrapper">
@@ -63,7 +64,6 @@
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
-
 						<div class="slide">
 							<div class="slide-text">
 								<b class="slide-title">Любим математику как никто другой</b>
@@ -71,7 +71,6 @@
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
-
 						<div class="slide">
 							<div class="slide-text">
 								<b class="slide-title">Только ночь, <br>только хардкор</b>
@@ -79,18 +78,18 @@
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- end slider -->
 
+		<!-- end slider -->
 
 		<div class="content">
 			<div class="container">
 
 				<!-- FEATURES -->
+
 				<div class="features clearfix">
 					<div class="features-item sites">
 						<figure class="features-img">
@@ -102,7 +101,6 @@
 						</div>
 						<a class="btn" href="#">Заказать</a>
 					</div>
-					
 					<div class="features-item apps">
 						<figure class="features-img">
 							<img src="img/illustration-2.jpg" alt="applications" height="146" width="300">
@@ -113,7 +111,6 @@
 						</div>
 						<a class="btn" href="#">Заказать</a>
 					</div>
-
 					<div class="features-item presents">
 						<figure class="features-img">
 							<img src="img/illustration-3.jpg" alt="presentations" height="146" width="300">
@@ -125,10 +122,11 @@
 						<a class="btn" href="#">Заказать</a>
 					</div>
 				</div>
+
 				<!-- end features -->
 
-
 				<!-- ABOUT -->
+
 				<div class="about clearfix">
 					<div class="about-left">
 						<p class="lead"><b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b></p>
@@ -144,98 +142,106 @@
 						<img src="img/nerds-illustration.jpg" alt="nёrds" height="208" width="360">
 						<h4>С 2004 года любим точность во всем:</h4>
 						<ul class="guaranty">
-							<li><span class="percent">146<b>%</b></span> <span class="text">Уровень самоотдачи</span></li>
-							<li><span class="percent">100<b>%</b></span> <span class="text">Соблюдение сроков</span></li>
-							<li><span class="percent">50<b>%</b></span> <span class="text">Минимальная предоплата</span></li>
+							<li>
+								<div class="percent">146<b>%</b></div>
+								<div class="text">Уровень самоотдачи</div>
+							</li>
+							<li>
+								<div class="percent">100<b>%</b></div>
+								<div class="text">Соблюдение сроков</div>
+							</li>
+							<li>
+								<div class="percent">50<b>%</b></div>
+								<div class="text">Минимальная предоплата</div>
+							</li>
 						</ul>
 					</div>
 				</div>
+
 				<!-- end about -->
 
 				<!-- RECENT-WORKS -->
+
 				<div class="recent-works">
-					<div class="vertical-line">
-						<a class="recent-logo" href="https://htmlacademy.ru/" target="_blank">
-							<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
-						</a>
-					</div>
-					<div class="vertical-line">
-						<a class="recent-logo" href="http://barbershop.websciurus.com/" target="_blank">
-							<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
-						</a>
-					</div>
-					<div class="vertical-line">
-						<a class="recent-logo" href="#">
-							<img src="img/logo-3.png" alt="pink" height="52" width="185">
-						</a>
-					</div>
-					<div class="vertical-line">
-						<a class="recent-logo" href="#">
-							<img src="img/logo-4.png" alt="mishka" height="84" width="173">
-						</a>
-					</div>
+					<a class="recent-logo vertical-line" href="https://htmlacademy.ru/" target="_blank">
+						<img src="img/logo-1.png" alt="html-academy" height="68" width="199">
+					</a>
+					<a class="recent-logo vertical-line" href="http://barbershop.websciurus.com/" target="_blank">
+						<img src="img/logo-2.png" alt="borodinski" height="90" width="210">
+					</a>
+					<a class="recent-logo vertical-line" href="#">
+						<img src="img/logo-3.png" alt="pink" height="52" width="185">
+					</a>
+					<a class="recent-logo vertical-line" href="#">
+						<img src="img/logo-4.png" alt="mishka" height="84" width="173">
+					</a>
 				</div>
+
 				<!-- end recent-works -->
 
 			</div>
 		</div>
+
 		<!-- end content -->
 
 		<!-- MAP -->
+
 		<div id="map" class="map">
-			<div class="container">
 				<div class="google-map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651563!2d30.32089461639426!3d59.9387941818763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sby!4v1478867918398" width="100%" height="413" frameborder="0" style="border:0"></iframe>
 				</div>
+				<div class="container">
 
-				<!-- CONTACTS -->
-				<div class="contacts">
-					<h3>nёrds design studio</h3>
-					<p>191186, Санкт-Петербург,<br>
-					ул. Б. Конюшенная, д. 19/8 <br></p>
-					<p>тел. +7 (812) 275-75-75</p>
-					<a  class="btn write-us" href="feedback.html">Напишите нам</a>
+					<!-- CONTACTS -->
+
+					<div class="contacts">
+						<h3>nёrds design studio</h3>
+						<p>191186, Санкт-Петербург,<br>
+						ул. Б. Конюшенная, д. 19/8 <br></p>
+						<p>тел. +7 (812) 275-75-75</p>
+						<a  class="btn write-us" href="feedback.html">Напишите нам</a>
+					</div>
+
+					<!-- end contacts -->
+
 				</div>
-				<!-- end contacts -->
 
-			</div>
 				<!-- MODAL WINDOW -->
-			<div class="modal-window">
-				<form action="http://echo.nerdss.ru" method="post">
-					<fieldset class="modal-write-us">
-						<legend>Напишите нам</legend>
-						<label for="name-id">
-							Ваше имя:
-						</label>
-						<label for="email-id">
-							Ваш e-mail:
-						</label>
-						<input type="text" name="fullname" id="name-id" placeholder="Представьтесь, пожалуйста">
-						
-						<input type="email" name="e-mail" id="email-id" placeholder="Для отправки ответа">
-						<label class="textarea" for="message-id">
-							Текст письма:
-						</label>
-						<textarea rows="5" cols="89" name="message" id="message-id" placeholder="В свободной форме"></textarea>
-						<button class="btn">Отправить</button>
-						<button class="close" type="button" title="Закрыть">Закрыть</button>
-					</fieldset>
-				</form>
-			</div>
+
+				<div class="modal-window">
+					<form action="http://echo.nerdss.ru" method="post">
+						<fieldset class="modal-write-us">
+							<legend>Напишите нам</legend>
+							<label for="name-id">
+								Ваше имя:
+							</label>
+							<label for="email-id">
+								Ваш e-mail:
+							</label>
+							<input type="text" name="fullname" id="name-id" placeholder="Представьтесь, пожалуйста">
+							<input type="email" name="e-mail" id="email-id" placeholder="Для отправки ответа">
+							<label class="textarea" for="message-id">
+								Текст письма:
+							</label>
+							<textarea rows="5" cols="89" name="message" id="message-id" placeholder="В свободной форме"></textarea>
+							<button class="btn">Отправить</button>
+							<button class="close" type="button" title="Закрыть">Закрыть</button>
+						</fieldset>
+					</form>
+				</div>
+
 			<!-- end modal window -->
+		
 		</div>
 	</main>
-
-
 
 	<!-- FOOTER -->
 
 	<footer class="main-footer">
 		<div class="container">
 
-
-		
 			<!-- SOCIAL -->
+
 			<div class="social">
 				<div class="social-icons">
 					<a class="social-vk" href="https://vk.com/" target="_blank">Вконтакте</a>
@@ -247,6 +253,7 @@
 					<p>Скидка 10% для друзей из социальных сетей.</p>
 				</div>
 			</div>
+
 			<!-- end social -->
 
 		</div>
